<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="string_textview">My Nanodegree Apps!</string>
    <string name="string_toast">This button will launch my %1$s app!</string>


    <!-- Project titles -->
    <string name="string_button1">Popular Movies</string>
    <string name="string_button2">Stock Hawk</string>
    <string name="string_button3">Build it Bigger</string>
    <string name="string_button4">Make Your App Material</string>
    <string name="string_button5">Go Ubiquitous</string>
    <string name="string_button6">Capstone </string>

</resources>
