<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nanodegree.arghya.myappportfolio.app.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            style="@android:style/TextAppearance.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="30dp"
            android:text="@string/string_textview"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button_popular_movies"
            style="@style/ButtonStyle"
            android:text="@string/string_button1" />

        <Button
            android:id="@+id/button_stock_hawk"
            style="@style/ButtonStyle"
            android:text="@string/string_button2" />

        <Button
            android:id="@+id/button_build_it_bigger"
            style="@style/ButtonStyle"
            android:text="@string/string_button3" />

        <Button
            android:id="@+id/button_make_material_app"
            style="@style/ButtonStyle"
            android:text="@string/string_button4" />

        <Button
            android:id="@+id/button_go_ubiquitous"
            style="@style/ButtonStyle"
            android:text="@string/string_button5" />

        <Button
            android:id="@+id/button_capstone"
            style="@style/ButtonStyle"
            android:text="@string/string_button6" />

    </LinearLayout>

</ScrollView>

